--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.0.0",
     "hardhat": "^2.25.0"
+  },
+  "dependencies": {
+    "dotenv": "^17.1.0"
   }
 }
