--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+# clerk configuration (can include secrets)
+/.clerk/
